tried to fix the room URL flicker issue, and while that's (mostly) fixed, it's also appearing in the wrong spot

--- a/client/stylesheets/sky.less
+++ b/client/stylesheets/sky.less
@@ -1640,7 +1640,7 @@ html.nprogress-busy #sky-header .logo a img {
 			height: 54px;
 			line-height: 54px;
 			font-size: 0;
-			display: inline-block;
+			display: inline;
 			background-color: transparent;
 			transition: background-color .3s ease;
 
